--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,13 +35,15 @@
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </a>
             </span>
-            <span>
-
+            <span class="icon">
+                <a href="">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
             </span>
         </div>
         <div class="email">
             <h2>Want to chat? <i class="fa fa-envelope-o" aria-hidden="true"></i></h2>
-            <p><strong>Email: </strong></p>
+            <p><strong>Email: <a class="email-link" href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
             <p>Valley Digital</p>
         </div>
     </section>
@@ -60,11 +62,13 @@
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </span>
             </a>
-            <span>
-
-            </span>
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </span>
+            </a>
         </div>
-        <p><strong>Email: a@b</strong></p>
+        <p><strong>Email: <a href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
         <p>Valley Digital</p>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
