--- a/pages/services.html
+++ b/pages/services.html
@@ -28,8 +28,8 @@
                     <h2>Lifetime hosting and maintenance</h2>
                     <p>
                         When your website is deployed, we offer a lifetime of updates and edits so that you don't have to do anything.
-                        Want to change your logo? Simple. Need to change your contact details? We can do that. Pay £40 per month, drop
-                        an email and we'll be right on it.
+                        Want to change your logo? Simple. Need to change your contact details? We can do that. Pay £30 per month, drop
+                        an email and we'll sort out all the technical details.
                     </p>
                 </div>
                 <div class="point">
@@ -40,20 +40,27 @@
                         cancel before permanent deployment, you will be refunded your money.
                     </p>
                 </div>
+                <div class="point">
+                    <h2>Fast and efficient</h2>
+                    <p>
+                        It only takes us on average a couple days to have everything finished. As we continue this side of business, we only keep getting faster.
+                        We are a great option if you want a polished website quick, without it being rushed, insecure and full of bugs.
+                    </p>
+                </div>
             </div>
         </div>
-        <div class="part">
+        <div class="part two-side">
             <div class="process">
                 <h2>The process</h2>
                 <p>Here is how working with us will go:</p>
                 <ul>
-                    <li>You come and contact us with a new website idea.</li>
-                    <li>Make sure to send us examples, images you'd like to include, logos or anything to streamline the process.</li>
-                    <li>We'll ask you for a deposit of £200 and to sign a legal contract.</li>
-                    <li>Once this is done, we confirm the order and get working.</li>
-                    <li>When the site is finished, we will send it to you for final opinions. Remember, if you don't like it, tell us!</li>
-                    <li>Once you are pleased, you either pay the rest immediately or in monthly installments.</li>
-                    <li>If you want us to host and maintain it, you can pay £40 per month</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>You come and contact us with a new website idea.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>Make sure to send us examples, images you'd like to include, logos or anything to streamline the process.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>We'll ask you for a deposit of £200 and to sign a legal contract.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>Once this is done, we confirm the order and get working. You'll get continuous updates throughout.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>When the site is finished, we will send it to you for final opinions. Remember, if you don't like it, tell us!</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>Once you are pleased, you either pay the rest immediately or in monthly installments.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>If you want us to host and maintain it, you can pay £30 per month.</li>
                 </ul>
                 <p class="warning">When using images, logos, etc, make sure it is legal for them to be used!</p>
             </div>
@@ -64,29 +71,30 @@
                 <h3>Premium</h3>
                 <h4>Minimum £10,000. Can be negotiated</h4>
                 Coming soon!</br></br>
-                <button>Contact us</button>
+                <button><a class="none" href="services.html">Learn more</a></button>
+                <button><a class="none" href="contact.html">Contact us</a></button>
             </div>
             <div class="service">
                 <h3>Standard</h3>
-                <h4>Pay a deposit of £300 first</h4>
-                <h4>Once finished, £1200 up front or £120 per month (for 10 months)</h4>
+                <h4>Pay a deposit of £200 first</h4>
+                <h4>Once finished, £1000 up front or £100 per month (for 10 months)</h4>
                 <ul>
                     <li>5 pages</li>
                     <li>Unlimited revisions</li>
                     <li>Lifetime updates</li></br>
-                    <button>Contact us</button>
+                    <button><a class="none" href="services.html">Learn more</a></button>
+                    <button><a  class="none" href="contact.html">Contact us</a></button>
                 </ul>
             </div>
             <div class="service" id="service3">
                 <h3>Hosting + maintenance</h3>
-                <h4>£40 per month</h4>
+                <h4>£30 per month</h4>
                 <ul>
                     <li>Included in both packages if you would like</li>
-                    <li>Done for a lifetime</li>
                     <li>Lifetime updates</li>
                     <li>Unlimited edits</li></br>
-                    <button>Learn more</button>
-                    <button>Contact us</button>
+                    <button><a class="none" href="services.html">Learn more</a></button>
+                    <button><a class="none" href="contact.html">Contact us</a></button>
                 </ul>
             </div>
     </section>
@@ -105,11 +113,13 @@
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </span>
             </a>
-            <span>
-
-            </span>
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </span>
+            </a>
         </div>
-        <p><strong>Email: a@b</strong></p>
+        <p><strong>Email: <a href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
         <p>Valley Digital</p>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
