--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="design">
                         <h3>Garden Club (standard example)</h3>
                         <img class="computer" src="public/images/garden-club.jpg" alt="Computer depicting a standard website page">
-                        </br> Visit <a class="here" href="">here</a> to see the final product.
+                        </br> Visit <a class="here" href="https://garden-club-hereford.netlify.app">here</a> to see the final product.
                     </div>
                     <div class="design">
                         <h3>Blog Application (premium example)</h3>
@@ -76,8 +76,8 @@
             <div class="payments">
                 <h2>Payment plans <i class="fa fa-credit-card-alt" aria-hidden="true"></i></h2>
                 <p>
-                    A standard website of 5 pages costs £1500. Each additional pages costs another £100. At the start, you pay an initial £300 deposit and then we get to work.
-                    You can pay the rest of the £1200 up front or you can choose to pay £120 per month for 10 months.
+                    A standard website of 5 pages costs £1200. Each additional pages costs another £100. At the start, you pay an initial £200 deposit and then we get to work.
+                    You can pay the rest of the £1000 up front or you can choose to pay £100 per month for 10 months.
                 </p>
             </div>
         </div>
@@ -87,19 +87,19 @@
                 <h3>Premium</h3>
                 <h4>Minimum £10,000.</h4>
                 Coming soon! </br></br>
-                <button>Learn more</button>
-                <button>Contact us</button>
+                <button><a href="pages/services.html" class="none">Learn more</a></button>
+                <button><a href="pages/contact.html" class="none">Contact us</a></button>
             </div>
             <div class="service" id="service2">
                 <h3>Standard</h3>
-                <h4>Pay a deposit of £300 first</h4>
-                <h4>Once finished, £1200 up front or £120 per month (for 10 months)</h4>
+                <h4>Pay a deposit of £200 first</h4>
+                <h4>Once finished, £1000 up front or £100 per month (for 10 months)</h4>
                 <ul>
                     <li>5 pages</li>
                     <li>Unlimited revisions</li>
                     <li>Lifetime updates</li></br>
-                    <button>Learn more</button>
-                    <button>Contact us</button>
+                    <button><a href="pages/services.html" class="none">Learn more</a></button>
+                    <button><a href="pages/contact.html" class="none">Contact us</a></button>
                 </ul>
             </div>
             <div class="service" id="service3">
@@ -107,11 +107,10 @@
                 <h4>£30 per month</h4>
                 <ul>
                     <li>Included in both packages if you would like</li>
-                    <li>Done for a lifetime</li>
                     <li>Lifetime updates</li>
                     <li>Unlimited edits</li></br>
-                    <button>Learn more</button>
-                    <button>Contact us</button>
+                    <button><a href="pages/services.html" class="none">Learn more</a></button>
+                    <button><a href="pages/contact.html" class="none">Contact us</a></button>
                 </ul>
             </div>
         </div>
@@ -131,13 +130,15 @@
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </a>
             </span>
-            <span>
-
-            </span>
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </span>
+            </a>
         </div>
         <div class="info">
             <div class="contact">
-                <p><strong>Email: a@b</strong></p>
+                <p><strong>Email: <a href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
                 <p>Valley Digital</p>
             </div>
             <ul class="links">
