--- a/pages/about.html
+++ b/pages/about.html
@@ -28,12 +28,12 @@
                 <h2>Who we are <i class="fa fa-comments-o" aria-hidden="true"></i></h2>
                 <p>
                     We are a small web development company that makes static websites. A simple browse through the web
-                    shows the importanceof having a solid website for a company. But sadly, there seems to be an
-                    increasing trend of small businesses that lack a website or a website made poorly with quick templates
-                    online, no use of maintainable code and insecure security sytems. Now that's bound to lose a few
-                    customers.</br>
+                    shows the importance of having a solid website for a company. But sadly, there seems to be an
+                    increasing trend of small businesses that have a website made poorly with quick templates
+                    online, no use of maintainable code and insecure security systems. Now that's bound to lose a few
+                    customers.</br></br>
                     That's why we offer affordable yet functional websites, both for business owners and individuals. Even
-                    if you don't want a website and are looking for a chat or anything really, just give
+                    if you don't want a website and are only inquiring, just give
                     us a shout <a class="here" href="contact.html">here</a>.
                 </p>
                 <h3>&quot;Above and beyond&quot;, that's our motto.</h3>
@@ -44,13 +44,13 @@
                 <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
                 <div class="work-container">
                     <div class="design">
-                        <h3>(standard example)</h3>
-                        <img class="computer" src="../public/images/computer.jpg" alt="Computer depicting a standard website page">
+                        <h3>Garden club (standard example)</h3>
+                        <img class="computer" src="../public/images/garden-club.jpg" alt="Computer depicting a standard website page">
                         </br> Visit <a class="here" href="">here</a> to view the final product.
                     </div>
                     <div class="design">
                         <h3>Blog Application (premium example)</h3>
-                        <img class="computer" src="../public/images/computer.jpg" alt="Computer depicting our blog API">
+                        <img class="computer" src="../public/images/blog-app.jpg" alt="Computer depicting our blog API">
                         </br>Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
                     </div>
                 </div>
@@ -62,31 +62,30 @@
                 <h3>Premium</h3>
                 <h4>Minimum £10,000.</h4>
                 Coming soon! </br></br>
-                <button>Learn more</button>
-                <button>Contact us</button>
+                <button><a href="services.html" class="none">Learn more</a></button>
+                <button><a href="contact.html" class="none">Contact us</a></button>
             </div>
             <div class="service" id="service2">
                 <h3>Standard</h3>
-                <h4>Pay a deposit of £300 first</h4>
-                <h4>Once finished, £1200 up front or £120 per month (for 10 months)</h4>
+                <h4>Pay a deposit of £200 first</h4>
+                <h4>Once finished, £1000 up front or £100 per month (for 10 months)</h4>
                 <ul>
                     <li>5 pages</li>
                     <li>Unlimited revisions</li>
                     <li>Lifetime updates</li></br>
-                    <button>Learn more</button>
-                    <button>Contact us</button>
+                    <button><a href="services.html" class="none">Learn more</a></button>
+                    <button><a href="contact.html" class="none">Contact us</a></button>
                 </ul>
             </div>
             <div class="service" id="service3">
                 <h3>Hosting + maintenance</h3>
-                <h4>£40 per month</h4>
+                <h4>£30 per month</h4>
                 <ul>
                     <li>Included in both packages if you would like</li>
-                    <li>Done for a lifetime</li>
                     <li>Lifetime updates</li>
                     <li>Unlimited edits</li></br>
-                    <button>Learn more</button>
-                    <button>Contact us</button>
+                    <button><a href="services.html" class="none">Learn more</a></button>
+                    <button><a href="contact.html" class="none">Contact us</a></button>
                 </ul>
             </div>
         </div>
@@ -106,11 +105,13 @@
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </span>
             </a>
-            <span>
-
-            </span>
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </span>
+            </a>
         </div>
-        <p><strong>Email: a@b</strong></p>
+        <p><strong>Email: <a href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
         <p>Valley Digital</p>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
