--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     </header>
     <section>
         <div class="part">
+            <div class="parent">
+                <img src="public/images/ipad-phone.jpg" alt="Our websites fit on many sizes" width="500px" height="520px">
+                <div class="caption-container">
+                    <h2 class="caption">One size fits all</h2>
+                    <p>One website for you can be accessed everywhere.</p>
+                </div>
+            </div>
             <div class="summary">
                 <h1>We specialise in web development</h1>
                 <p>
@@ -33,8 +40,8 @@
             </div>
             <div class="introduction">
                 <p>
-                    No WordPress or page builders over here. Those kinds of sites are easy to break, lead to a high build up in costs for hosting and premium features, and more.
-                    Here, every bit of code is written line by line for best performance so you can bring in more viewers to your site.
+                    No WordPress, Squarespace or page builders over here. Those kinds of sites are easy to break, lead to a high build up in costs for hosting and premium features, and more.
+                    Here, every bit of code is written line by line for optimal performance so you can bring in more viewers to your site.
                 </p>
                 <div class="grid">
                     <div class="grid-item">
@@ -52,6 +59,14 @@
                         <p>
                             If you change your mind before, during or after the process, you can do so with no extra fees. Cancelling before permanent deployment
                             makes you eligible for a refund.
+                        </p>
+                    </div>
+                    <div class="grid-item">
+                        <h3>Interactive features</h3>
+                        <p>
+                            Even a standard website product can include contact forms, calendars, animations,
+                            built-in blogs that can be self-managed, and more! These features can't be found in
+                            online builders.
                         </p>
                     </div>
                 </div>
@@ -148,7 +163,7 @@
                 <li><a href="pages/contact.html">Contact us</a></li>
             </ul>
         </div>
-        <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved. Images designed by Pexels.o</div>
+        <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved. Images designed by Pexels.</div>
     </footer>
 </body>
 </html>
