--- a/pages/about.html
+++ b/pages/about.html
@@ -28,15 +28,15 @@
                 <h2>Who we are <i class="fa fa-comments-o" aria-hidden="true"></i></h2>
                 <p>
                     We are a small web development company that makes static websites. A simple browse through the web
-                    shows the importance of having a solid website for a company. But sadly, there seems to be an
-                    increasing trend of small businesses that have a website made poorly with quick templates
-                    online, no use of maintainable code and insecure security systems. Now that's bound to lose a few
-                    customers.</br></br>
+                    shows the importance of having a solid website for a company. The benefits of having a set of experienced web
+                    web developers are that you recieve a high quality website made with maintainable, hand-written code. 
+                    Often websites made with online builders are made with quick templates, insecure security, and a lack of 
+                    interactive features like calendars, contact forms, blogs, etc.</br></br>
                     That's why we offer affordable yet functional websites, both for business owners and individuals. Even
                     if you don't want a website and are only inquiring, just give
                     us a shout <a class="here" href="contact.html">here</a>.
                 </p>
-                <h3>&quot;Above and beyond&quot;, that's our motto.</h3>
+                <h1>&quot;Above and beyond&quot;, that's our motto.</h1>
             </div>
         </div>
         <div class="part">
