--- a/pages/services.html
+++ b/pages/services.html
@@ -24,13 +24,27 @@
     <section>
         <div class="part">
             <div class="points">
-                <div class="point">
-                    <h2>Lifetime hosting and maintenance</h2>
-                    <p>
-                        When your website is deployed, we offer a lifetime of updates and edits so that you don't have to do anything.
-                        Want to change your logo? Simple. Need to change your contact details? We can do that. Pay £30 per month, drop
-                        an email and we'll sort out all the technical details.
-                    </p>
+                <div class="parent">
+                    <div class="point">
+                        <h2>Lifetime hosting and maintenance</h2>
+                        <p>
+                            When your website is deployed, we offer a lifetime of updates and edits so that you don't have to do anything.
+                            Want to change your logo? Simple. Need to change your contact details? We can do that. Pay £30 per month, drop
+                            an email and we'll sort out all the technical details.
+                        </p>
+                    </div>
+                    <div class="point">
+                        <h2>Go beyond a simple website</h2>
+                        <p>
+                            We can implement many different features even if it's a standard 5 page website. The upcoming premium option will include 
+                            even more powerful features, specifically e-commerce. This will include robust security and continuous updates to help
+                            prevent malicious attacks on your site.
+                        </p>
+                    </div>
+                    <div class="child">
+                        <h2 class="caption">Interative features: built-in blogs, animations and more.</h2>
+                        <img class="blog" src="../public/images/blog-service.jpg" alt="We offer built in blogs for your website" width="500" height="660">
+                    </div>
                 </div>
                 <div class="point">
                     <h2>Unlimited revisions</h2>
@@ -64,6 +78,7 @@
                 </ul>
                 <p class="warning">When using images, logos, etc, make sure it is legal for them to be used!</p>
             </div>
+            <div class="image"></div>
         </div>
         <div class="services-container">
             <h1>Services</h1>
