--- a/index.html
+++ b/index.html
@@ -27,16 +27,22 @@
             <div class="parent">
                 <img src="public/images/ipad-phone.jpg" alt="Our websites fit on many sizes" width="500px" height="520px">
                 <div class="caption-container">
-                    <h2 class="caption">One size fits all</h2>
-                    <p>One website for you can be accessed everywhere.</p>
+                    <h2 class="caption">Built just for you</h2>
+                    <p>A customised website for your own business.</p>
                 </div>
             </div>
             <div class="summary">
-                <h1>We specialise in web development</h1>
-                <p>
-                    Need a website? We have you covered: we offer hand-coded websites. Don't worry about hosting it either,
-                    we'll do it for a minimal cost.
-                </p>
+                <div class="left">
+                    <h1>We specialise in web development</h1>
+                    <p>
+                        Need a website? We have you covered: we offer hand-coded websites. Don't worry about hosting it either,
+                        we'll do it for a minimal cost.
+                    </p>
+                </div>
+                <div class="right">
+                    <a class="button" href="pages/about.html">About us</a>
+                    <a class="button" href="pages/contact.html"><i class="fa fa-play-circle" aria-hidden="true"></i>Contact</a>
+                </div>
             </div>
             <div class="introduction">
                 <p>
