--- a/pages/about.html
+++ b/pages/about.html
@@ -36,8 +36,12 @@
                     if you don't want a website and are only inquiring, just give
                     us a shout <a class="here" href="contact.html">here</a>.
                 </p>
-                <h1>&quot;Above and beyond&quot;, that's our motto.</h1>
             </div>
+        </div>
+        <div class="picture">
+            <h2 class="quote">&quot;Above and beyond&quot;, that's our motto.</h2>
+            <p>Grow a business through the power of the internet.</p>
+            <img class="features" src="../public/images/features.jpg" alt="We are professionals who can code many interesting features on your website">
         </div>
         <div class="part">
             <div class="portfolio">
