--- a/index.html
+++ b/index.html
@@ -78,6 +78,22 @@
                 </div>
             </div>
         </div>
+        <div class="inside">
+            <div class="slide-container">
+                <div class="slide-left">
+                    <h2>We are experts in this industry</h2>
+                    <p>Work with us for a polished product. You can see the process on our <a class="link" href="pages/services.html">services page</a>.</p>
+                </div>
+                <img src="" alt="">
+                <div class="slide-right">
+                    <h2>Fast and steady</h2>
+                    <p>
+                        Hand coded websites like ours have extremely high performance and speed. We can manipulate the metrics of your website easily. 
+                        This includes websites that are aesthetic and animated in nature.
+                    </p>
+                </div>
+            </div>
+        </div>
         <div class="part">
             <div class="portfolio">
                 <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
