--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,29 +22,45 @@
         </ul>
         <h1>Contact us</h1>
     </header>
-    <section>
-        <div class="icons">
-            <p>Visit us:</p>
-            <span class="icon">
-                <a href="">
-                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                </a>
-            </span>
-            <span class="icon">
-                <a href="">
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                </a>
-            </span>
-            <span class="icon">
-                <a href="">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-            </span>
+    <section class="contact-section">
+        <div class="left">
+            <div class="icons">
+                <p>Visit us:</p>
+                <span class="icon">
+                    <a href="">
+                        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                    </a>
+                </span>
+                <span class="icon">
+                    <a href="">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </a>
+                </span>
+                <span class="icon">
+                    <a href="">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                </span>
+            </div>
+            <div class="email">
+                <h2>Want to chat? <i class="fa fa-envelope-o" aria-hidden="true"></i></h2>
+                <p><strong>Email: <a class="email-link" href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
+                <p>2024 © Valley Digital</p>
+            </div>
         </div>
-        <div class="email">
-            <h2>Want to chat? <i class="fa fa-envelope-o" aria-hidden="true"></i></h2>
-            <p><strong>Email: <a class="email-link" href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
-            <p>Valley Digital</p>
+        <div class="slide-container">
+            <div class="slide-left">
+                <h2>We are experts in this industry</h2>
+                <p>Work with us for a polished product. You can see the process on our <a class="link" href="pages/services.html">services page</a>.</p>
+            </div>
+            <img src="" alt="">
+            <div class="slide-right">
+                <h2>Fast and steady</h2>
+                <p>
+                    Hand coded websites like ours have extremely high performance and speed. We can manipulate the metrics of your website easily. 
+                    This includes websites that are aesthetic and animated in nature.
+                </p>
+            </div>
         </div>
     </section>
     <footer class="footer">
