--- a/pages/services.html
+++ b/pages/services.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="child">
                         <p>
-                            This example can be seen online <a href="https://garden-club-hereford/blog">here</a>. If you want to be able to manage your own blog on your website, you can sign up and log in
+                            This example can be seen online <a href="https://garden-club-hereford.netlify.app/blog">here</a>. If you want to be able to manage your own blog on your website, you can sign up and log in
                             through the admin portal. You will then be redirected a personal builder where you can edit, create and delete blog posts.
                         </p>
                         <h2 class="caption">Interative features: built-in blogs, animations and more.</h2>
