--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
                     <h2>We are experts in this industry</h2>
                     <p>Work with us for a polished product. You can see the process on our <a class="link" href="pages/services.html">services page</a>.</p>
                 </div>
-                <img src="" alt="">
+                <picture>
+                    <source media="(min-width: 1500px)" srcset="public/images/vscode1.jpg">
+                    <source media="(min-width: 850px)" srcset="public/images/vscode2.jpg">
+                    <img class="pic" src="public/images/vscode2.jpg" alt="We use VSCode as our IDE">
+                </picture>
                 <div class="slide-right">
                     <h2>Fast and steady</h2>
                     <p>
@@ -99,7 +103,7 @@
                 <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
                 <div class="work-container">
                     <div class="design">
-                        <h3>Garden Club (standard example)</h3>
+                        <h3>Garden Club (standard 5 page example)</h3>
                         <img class="computer" src="public/images/garden-club.jpg" alt="Computer depicting a standard website page">
                         </br> Visit <a class="here" href="https://garden-club-hereford.netlify.app">here</a> to see the final product.
                     </div>
@@ -167,7 +171,7 @@
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </a>
             </span>
-            <a href="">
+            <a href="https://www.instagram.com/ukvalleydigital/">
                 <span class="icon">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                 </span>
