--- a/pages/about.html
+++ b/pages/about.html
@@ -48,7 +48,7 @@
                 <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
                 <div class="work-container">
                     <div class="design">
-                        <h3>Garden club (standard example)</h3>
+                        <h3>Garden club (standard 5 page example)</h3>
                         <img class="computer" src="../public/images/garden-club.jpg" alt="Computer depicting a standard website page">
                         </br> Visit <a class="here" href="">here</a> to view the final product.
                     </div>
@@ -109,7 +109,7 @@
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </span>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/ukvalleydigital/">
                 <span class="icon">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                 </span>
