--- a/pages/services.html
+++ b/pages/services.html
@@ -132,7 +132,7 @@
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </span>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/ukvalleydigital/">
                 <span class="icon">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                 </span>
