--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,7 +37,7 @@
                     </a>
                 </span>
                 <span class="icon">
-                    <a href="">
+                    <a href="https://www.instagram.com/ukvalleydigital/">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
                 </span>
@@ -53,7 +53,11 @@
                 <h2>We are experts in this industry</h2>
                 <p>Work with us for a polished product. You can see the process on our <a class="link" href="pages/services.html">services page</a>.</p>
             </div>
-            <img src="" alt="">
+            <picture>
+                <source class="pic vscode1" media="(min-width: 1500px)" srcset="../public/images/vscode1.jpg">
+                <source class="pic vscode2" media="(min-width: 850px)" srcset="../public/images/vscode2.jpg">
+                <img class="pic" src="../public/images/vscode2.jpg" alt="We use VSCode as our IDE">
+            </picture>
             <div class="slide-right">
                 <h2>Fast and steady</h2>
                 <p>
@@ -78,7 +82,7 @@
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </span>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/ukvalleydigital/">
                 <span class="icon">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                 </span>
