Make images responsive

--- a/pages/services.html
+++ b/pages/services.html
@@ -22,7 +22,7 @@
         <h1>Services</h1>
     </header>
     <section>
-        <div class="part">
+        <div class="part" id="special">
             <div class="points">
                 <div class="parent">
                     <div class="point">
