Add porfolio link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="menu">
             <li><a href="pages/about.html">About</a></li>
-            <li><a href="">Portfolio</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="pages/services.html">Services</a></li>
             <li><a href="pages/contact.html">Contact us</a></li>
         </ul>
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="part">
-            <div class="portfolio">
+            <div id="portfolio">
                 <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
                 <div class="work-container">
                     <div class="design">
@@ -184,7 +184,7 @@
             </div>
             <ul class="links">
                 <li><a href="pages/about.html">About</a></li>
-                <li><a href="">Portfolio</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="pages/services.html">Services</a></li>
                 <li><a href="pages/contact.html">Contact us</a></li>
             </ul>
