--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
-            <li><a href="">Portfolio</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact us</a></li>
         </ul>
@@ -44,13 +44,13 @@
             <img class="features" src="../public/images/features.jpg" alt="We are professionals who can code many interesting features on your website">
         </div>
         <div class="part">
-            <div class="portfolio">
+            <div id="portfolio">
                 <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
                 <div class="work-container">
                     <div class="design">
                         <h3>Garden club (standard 5 page example)</h3>
                         <img class="computer" src="../public/images/garden-club.jpg" alt="Computer depicting a standard website page">
-                        </br> Visit <a class="here" href="">here</a> to view the final product.
+                        </br> Visit <a class="here" href="https://garden-club-hereford.netlify.app">here</a> to view the final product.
                     </div>
                     <div class="design">
                         <h3>Blog Application (premium example)</h3>
@@ -115,14 +115,18 @@
                 </span>
             </a>
         </div>
-        <p><strong>Email: <a href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
-        <p>Valley Digital</p>
-        <ul class="menu">
-            <li><a href="about.html">About</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact us</a></li>
-        </ul>
+        <div class="info">
+            <div class="contact">
+                <p><strong>Email: <a href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
+                <p>Valley Digital</p>
+            </div>
+            <ul class="links">
+                <li><a href="about.html">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </div>
         <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved. Images designed by Pexels.</div>
     </footer>
 </body>
