--- a/pages/services.html
+++ b/pages/services.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
-            <li><a href="">Portfolio</a></li>
+            <li><a href="../index.html#portfolio">Portfolio</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact us</a></li>
         </ul>
@@ -138,14 +138,18 @@
                 </span>
             </a>
         </div>
-        <p><strong>Email: <a href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
-        <p>Valley Digital</p>
-        <ul class="menu">
-            <li><a href="about.html">About</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact us</a></li>
-        </ul>
+        <div class="info">
+            <div class="contact">
+                <p><strong>Email: <a href="mailto:ukvalleydigital@gmail.com">ukvalleydigital@gmail.com</a></strong></p>
+                <p>Valley Digital</p>
+            </div>
+            <ul class="links">
+                <li><a href="about.html">About</a></li>
+                <li><a href="../index.html#portfolio">Portfolio</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </div>
         <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved. Images designed by Pexels.</div>
     </footer>
 </body>
